--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="co.sfng.android.calendarwidget"
+    package="co.sfng.calendarwidget"
     android:versionCode="1"
     android:versionName="1.0" >
 
